@@ -344,7 +344,8 @@ static cs_lagr_extra_module_t _lagr_extra_module
      .cvar_omg = NULL,
      .cvar_r11 = NULL,
      .cvar_r22 = NULL,
-     .cvar_r33 = NULL};
+     .cvar_r33 = NULL,
+     .cvar_rij = NULL};
 
 cs_lagr_extra_module_t *cs_glob_lagr_extra_module = &_lagr_extra_module;
 
@@ -733,6 +734,7 @@ _lagr_map_fields_default(void)
     _lagr_extra_module.cvar_r11    = cs_field_by_name_try("r11");
     _lagr_extra_module.cvar_r22    = cs_field_by_name_try("r22");
     _lagr_extra_module.cvar_r33    = cs_field_by_name_try("r33");
+    _lagr_extra_module.cvar_rij    = cs_field_by_name_try("rij");
     _lagr_extra_module.viscl       = cs_field_by_name_try("molecular_viscosity");
     _lagr_extra_module.cpro_viscls = NULL;
 
@@ -780,6 +782,7 @@ _lagr_map_fields_default(void)
     _lagr_extra_module.cvar_r11    = cs_field_by_name_try("lagr_r11");
     _lagr_extra_module.cvar_r22    = cs_field_by_name_try("lagr_r22");
     _lagr_extra_module.cvar_r33    = cs_field_by_name_try("lagr_r33");
+    _lagr_extra_module.cvar_rij    = cs_field_by_name_try("lagr_rij");
     _lagr_extra_module.viscl       = cs_field_by_name_try("lagr_molecular_viscosity");
     _lagr_extra_module.scal_t      = cs_field_by_name_try("lagr_enthalpy");
     _lagr_extra_module.cpro_viscls = cs_field_by_name_try("lagr_thermal_conductivity");
